# salesforce-userinfo-claims-enrichment

./: .gitignore  CONFIG.md  Cargo.toml  Makefile  README.md  exchange.json
definition/: gcl.yaml
src/: lib.rs
