# Copyright 2026 Salesforce, Inc. All rights reserved.
[package]
name = "salesforce_userinfo_claims_enrichment"
version = "1.0.5"
rust-version = "1.88.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.anypoint]
group_id = "eca25329-9592-4ff1-9054-1b08d103b991"
definition_asset_id = "salesforce-userinfo-claims-enrichment"
implementation_asset_id = "salesforce-userinfo-claims-enrichment-flex"

[dependencies]
pdk = { version = "1.9.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
anyhow = "1.0"

[dev-dependencies]
pdk-test = { version = "1.9.0" }
pdk-unit = { version = "1.9.0" }
httpmock = "0.6"
reqwest = "0.11"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
strip = "debuginfo"
